Reword comment for allowHeaders to match methods
Signed-off-by: Damian Sawicki <dsawicki@google.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -502,8 +502,10 @@ spec:
                                         client side.
 
                                         A wildcard indicates that the requests with all HTTP headers are allowed.
-                                        The `Access-Control-Allow-Headers` response header can only use `*`
-                                        wildcard as value when the request is not credentialed.
+                                        If config contains the wildcard "*" in allowHeaders and the request is
+                                        not credentialed, the `Access-Control-Allow-Headers` response header
+                                        can either use the `*` wildcard or the value of
+                                        Access-Control-Request-Headers from the request.
 
                                         When the request is credentialed, the gateway must not specify the `*`
                                         wildcard in the `Access-Control-Allow-Headers` response header. When
@@ -2024,8 +2026,10 @@ spec:
                                   client side.
 
                                   A wildcard indicates that the requests with all HTTP headers are allowed.
-                                  The `Access-Control-Allow-Headers` response header can only use `*`
-                                  wildcard as value when the request is not credentialed.
+                                  If config contains the wildcard "*" in allowHeaders and the request is
+                                  not credentialed, the `Access-Control-Allow-Headers` response header
+                                  can either use the `*` wildcard or the value of
+                                  Access-Control-Request-Headers from the request.
 
                                   When the request is credentialed, the gateway must not specify the `*`
                                   wildcard in the `Access-Control-Allow-Headers` response header. When
@@ -4751,8 +4755,10 @@ spec:
                                         client side.
 
                                         A wildcard indicates that the requests with all HTTP headers are allowed.
-                                        The `Access-Control-Allow-Headers` response header can only use `*`
-                                        wildcard as value when the request is not credentialed.
+                                        If config contains the wildcard "*" in allowHeaders and the request is
+                                        not credentialed, the `Access-Control-Allow-Headers` response header
+                                        can either use the `*` wildcard or the value of
+                                        Access-Control-Request-Headers from the request.
 
                                         When the request is credentialed, the gateway must not specify the `*`
                                         wildcard in the `Access-Control-Allow-Headers` response header. When
@@ -6273,8 +6279,10 @@ spec:
                                   client side.
 
                                   A wildcard indicates that the requests with all HTTP headers are allowed.
-                                  The `Access-Control-Allow-Headers` response header can only use `*`
-                                  wildcard as value when the request is not credentialed.
+                                  If config contains the wildcard "*" in allowHeaders and the request is
+                                  not credentialed, the `Access-Control-Allow-Headers` response header
+                                  can either use the `*` wildcard or the value of
+                                  Access-Control-Request-Headers from the request.
 
                                   When the request is credentialed, the gateway must not specify the `*`
                                   wildcard in the `Access-Control-Allow-Headers` response header. When
