--- a/conformance/tests/httproute-cors.yaml
+++ b/conformance/tests/httproute-cors.yaml
@@ -79,11 +79,11 @@ spec:
     - name: infra-backend-v1
       port: 8080
 ---
-# Test the usage of wildcards on authenticated requests and the proper RFC response
+# Test the usage of wildcards on authenticated and unauthenticated requests and the proper response
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: cors-wildcard-methods-headers-auth 
+  name: cors-wildcard-methods-headers 
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
@@ -93,7 +93,7 @@ spec:
     - type: CORS
       cors:
         allowOrigins:
-        - "https://other.foo.com"
+        - "*"
         allowMethods: ["*"]
         allowHeaders: ["*"]
         allowCredentials: true
@@ -104,4 +104,20 @@ spec:
     backendRefs:
     - name: infra-backend-v1
       port: 8080
+  - filters:
+    - type: CORS
+      cors:
+        allowOrigins:
+        - "*"
+        allowMethods: ["*"]
+        allowHeaders: ["*"]
+        allowCredentials: false
+    matches:
+    - path:
+        type: PathPrefix
+        value: /cors-wildcard-methods-headers-unauth
+    backendRefs:
+    - name: infra-backend-v1
+      port: 8080
+
 ---
