--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -7,3 +7,4 @@ resources:
 - standard/gateway.networking.k8s.io_backendtlspolicies.yaml
 - standard/gateway.networking.k8s.io_listenersets.yaml
 - standard/gateway.networking.k8s.io_tlsroutes.yaml
+- standard/gateway.networking.k8s.io_vap_safeupgrades.yaml
