Documentation for GEP-91 Client Certificate Validation Configuration

--- a/examples/standard/frontend-cert-validation.yaml
+++ b/examples/standard/frontend-cert-validation.yaml
@@ -19,8 +19,7 @@ spec:
             caCertificateRefs:
             - kind: ConfigMap
               group: ""
-              name: foo-example-com-ca-cert
-            mode: "AllowInsecureFallback"
+              name: bar-example-com-ca-cert
   listeners:
   - name: foo-https
     protocol: HTTPS
