documentation GEP-3155 Gateway's client certificate selection

--- a/examples/standard/backend-tls.yaml
+++ b/examples/standard/backend-tls.yaml
@@ -11,7 +11,7 @@ spec:
         group: ""
         name: foo-example-cert
   listeners:
-  - name: foo-https
+  - name: foo-http
     protocol: HTTP
     port: 80
     hostname: foo.example.com
