fix: enable safe-upgrades VAP to permit upgrades of experimental CRDs
Signed-off-by: Norwin Schnyder <norwin.schnyder+github@gmail.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_vap_safeupgrades.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_vap_safeupgrades.yaml
@@ -16,7 +16,9 @@ spec:
   validations:
     - expression: "object.spec.group != 'gateway.networking.k8s.io' || (
         has(object.metadata.annotations) && object.metadata.annotations.exists(k, k == 'gateway.networking.k8s.io/channel') && 
-        object.metadata.annotations['gateway.networking.k8s.io/channel'] == 'standard' )"
+        object.metadata.annotations['gateway.networking.k8s.io/channel'] == 'standard' ) || (
+        oldObject != null && has(oldObject.metadata.annotations) && oldObject.metadata.annotations.exists(k, k == 'gateway.networking.k8s.io/channel') && 
+        oldObject.metadata.annotations['gateway.networking.k8s.io/channel'] == 'experimental' )"
       message: "Installing experimental CRDs on top of standard channel CRDs is prohibited by default. Uninstall ValidatingAdmissionPolicy safe-upgrades.gateway.networking.k8s.io to install experimental CRDs on top of standard channel CRDs."
       reason: Invalid
     - expression: "object.spec.group != 'gateway.networking.k8s.io' || 
