TLSRoute: Use v1 for conformance tests

--- a/conformance/tests/tlsroute-invalid-backendref-unknown-kind.yaml
+++ b/conformance/tests/tlsroute-invalid-backendref-unknown-kind.yaml
@@ -15,7 +15,7 @@ spec:
     tls:
       mode: Passthrough
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha3
+apiVersion: gateway.networking.k8s.io/v1
 kind: TLSRoute
 metadata:
   name: invalid-backend-ref-unknown-kind
