--- a/conformance/tests/tlsroute-mixed-termination-same-namespace.yaml
+++ b/conformance/tests/tlsroute-mixed-termination-same-namespace.yaml
@@ -32,7 +32,7 @@ spec:
       mode: Passthrough
 ---
 # Route for Passthrough
-apiVersion: gateway.networking.k8s.io/v1alpha3
+apiVersion: gateway.networking.k8s.io/v1
 kind: TLSRoute
 metadata:
   name: gateway-conformance-mixed-passthroughroute
@@ -49,7 +49,7 @@ spec:
       port: 8443
 ---
 # TLSRoute and service for the terminated TCP service
-apiVersion: gateway.networking.k8s.io/v1alpha3
+apiVersion: gateway.networking.k8s.io/v1
 kind: TLSRoute
 metadata:
   name: gateway-conformance-mixed-terminateroute
