--- a/conformance/tests/tlsroute-simple-same-namespace.yaml
+++ b/conformance/tests/tlsroute-simple-same-namespace.yaml
@@ -1,4 +1,4 @@
-apiVersion: gateway.networking.k8s.io/v1alpha2
+apiVersion: gateway.networking.k8s.io/v1
 kind: TLSRoute
 metadata:
   name: gateway-conformance-infra-test
