--- a/nav.yml
+++ b/nav.yml
@@ -47,6 +47,7 @@ nav:
           - gRPC Routing: guides/grpc-routing.md
           - Backend Protocol Selection: guides/backend-protocol.md
           - Infrastructure attributes: guides/infrastructure.md
+          - ListenerSet: guides/listener-set.md
       - API Design: guides/api-design.md
       - CRD Management: guides/crd-management.md
       - Implementer's Guide: guides/implementers.md
@@ -60,6 +61,7 @@ nav:
               - BackendTLSPolicy: api-types/backendtlspolicy.md
               - BackendTrafficPolicy: api-types/backendtrafficpolicy.md
           - ReferenceGrant: api-types/referencegrant.md
+          - ListenerSet: api-types/listenerset.md
       - API specification:
           - Development:
               - Standard: reference/spec.md
