--- a/geps/gep-1767/metadata.yaml
+++ b/geps/gep-1767/metadata.yaml
@@ -2,7 +2,7 @@ apiVersion: internal.gateway.networking.k8s.io/v1alpha1
 kind: GEPDetails
 number: 1767
 name: CORS Filter
-status: Experimental
+status: Standard
 authors:
   - lianglli
   - robscott
@@ -16,4 +16,5 @@ references:
   - https://github.com/kubernetes-sigs/gateway-api/pull/3668
   - https://github.com/kubernetes-sigs/gateway-api/pull/4281
   - https://github.com/kubernetes-sigs/gateway-api/pull/4506
+  - https://github.com/kubernetes-sigs/gateway-api/pull/4579
 
