--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ extra_javascript:
 hooks:
 - hack/mkdocs-copy-geps.py
 - hack/mkdocs-generate-conformance.py
+- hack/mkdocs-generate-controller-wizard-data.py
 watch:
 - geps
 theme:
