--- a/examples/standard/listenerset/listenerset.yaml
+++ b/examples/standard/listenerset/listenerset.yaml
@@ -6,19 +6,31 @@ spec:
   gatewayClassName: example
   allowedListeners:
     namespaces:
-      from: Same
+      from: Selector
+      selector:
+        matchLabels:
+          belongs-to: shared-gateway
   listeners:
   - name: foo
     hostname: foo.com
     protocol: HTTP
     port: 80
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: team-1-ns
+  labels:
+    belongs: shared-gateway
+---
 apiVersion: gateway.networking.k8s.io/v1
 kind: ListenerSet
 metadata:
   name: first-workload-listeners
+  namespace: team-1-ns
 spec:
   parentRef:
+    namespace: default
     name: parent-gateway
     kind: Gateway
     group: gateway.networking.k8s.io
@@ -34,10 +46,18 @@ spec:
         group: ""
         name: first-workload-cert
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: team-2-ns
+  labels:
+    belongs: shared-gateway
+---
 apiVersion: gateway.networking.k8s.io/v1
 kind: ListenerSet
 metadata:
   name: second-workload-listeners
+  namespace: team-2-ns
 spec:
   parentRef:
     name: parent-gateway
