--- a/examples/standard/tls-routing/tls-route-terminate.yaml
+++ b/examples/standard/tls-routing/tls-route-terminate.yaml
@@ -1,15 +1,14 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: TLSRoute
 metadata:
-  name: foo-route
+  name: bar-route
 spec:
   parentRefs:
   - name: example-gateway
-    sectionName: tls
+    sectionName: tls-terminate
   hostnames:
-  - "foo.example.com"
+  - "bar.example.com"
   rules:
   - backendRefs:
-    - name: foo-svc
-      port: 443
-
+    - name: bar-svc
+      port: 8080
