Convert wizard into an wasm app.

--- a/.gitignore
+++ b/.gitignore
@@ -61,5 +61,9 @@ site-src/reference/spec.md
 site-src/reference/specx.md
 site-src/reference/**/spec.md
 site-src/reference/**/specx.md
+site-src/wizard/main.wasm
+site-src/wizard/wasm_exec.js
+site-src/wizard/data/*
 
 .lycheecache
+
