--- a/geps/gep-2643/metadata.yaml
+++ b/geps/gep-2643/metadata.yaml
@@ -2,7 +2,7 @@ apiVersion: internal.gateway.networking.k8s.io/v1alpha1
 kind: GEPDetails
 number: 2643
 name: TLS based passthrough Route / TLSRoute
-status: Experimental
+status: Standard
 # Note: The feature already exists, the GEP is a retroactive collection of information
 authors:
   - candita
