cleanup: update GEPS to reflect release 1.5
Signed-off-by: Norwin Schnyder <norwin.schnyder+github@gmail.com>

--- a/geps/gep-1713/metadata.yaml
+++ b/geps/gep-1713/metadata.yaml
@@ -15,3 +15,5 @@ references:
   - https://github.com/kubernetes-sigs/gateway-api/pull/3587
   - https://github.com/kubernetes-sigs/gateway-api/pull/3588
   - https://github.com/kubernetes-sigs/gateway-api/pull/3682
+featureNames:
+  - ListenerSet
