--- a/geps/gep-2643/metadata.yaml
+++ b/geps/gep-2643/metadata.yaml
@@ -20,3 +20,7 @@ relationships:
 references:
   - https://datatracker.ietf.org/doc/html/rfc6066#section-3
   - https://github.com/kubernetes-sigs/gateway-api/issues/2111
+featureNames:
+  - TLSRoute
+  - TLSRouteModeTerminate
+  - TLSRouteModeMixed
