--- a/geps/gep-3567/metadata.yaml
+++ b/geps/gep-3567/metadata.yaml
@@ -2,7 +2,7 @@ apiVersion: internal.gateway.networking.k8s.io/v1alpha1
 kind: GEPDetails
 number: 3567
 name: Gateway TLS Updates for HTTP/2 Connection Coalescing
-status: Experimental
+status: Standard
 # Any authors who contribute to the GEP in any way should be listed here using
 # their GitHub handle.
 authors:
@@ -27,7 +27,7 @@ references: []
 # featureNames is a list of the feature names introduced by the GEP, if there
 # are any. This will allow us to track which feature was introduced by which GEP.
 featureNames:
-  - GatewayReturn421
+  - GatewayHTTPSListenerDetectMisdirectedRequests
 # changelog is a list of hyperlinks to PRs that make changes to the GEP, in
 # ascending date order.
 changelog: []
