docs: Add documentation for ListenerSets (#4568)
* Add docs for listenerSets

* add guide to index

* fix markdown

* add api type

* update navigation

* Apply suggestions from code review

Co-authored-by: Suvin Nimnaka <hello@suvin.me>
Co-authored-by: Rob Scott <rob.scott87@gmail.com>

* address some more comments

* update example

* update doc

* Apply suggestions from code review

Co-authored-by: Nick Young <inocuo@gmail.com>

---------

Co-authored-by: Suvin Nimnaka <hello@suvin.me>
Co-authored-by: Rob Scott <rob.scott87@gmail.com>
Co-authored-by: Nick Young <inocuo@gmail.com>

--- a/nav.yml
+++ b/nav.yml
@@ -48,6 +48,7 @@ nav:
           - gRPC Routing: guides/grpc-routing.md
           - Backend Protocol Selection: guides/backend-protocol.md
           - Infrastructure attributes: guides/infrastructure.md
+          - ListenerSet: guides/listener-set.md
       - API Design: guides/api-design.md
       - CRD Management: guides/crd-management.md
       - Implementer's Guide: guides/implementers.md
@@ -62,6 +63,7 @@ nav:
               - BackendTrafficPolicy: api-types/backendtrafficpolicy.md
           - ReferenceGrant: api-types/referencegrant.md
           - TLSRoute: api-types/tlsroute.md
+          - ListenerSet: api-types/listenerset.md
       - API specification:
           - Development:
               - Standard: reference/spec.md
