--- a/nav.yml
+++ b/nav.yml
@@ -18,7 +18,7 @@ nav:
       - Implementations:
           - List: implementations.md
           - Comparisons:
-              - v1.5: implementations/v1.5.md
+            #   - v1.5: implementations/v1.5.md
               - v1.4: implementations/v1.4.md
               - v1.3: implementations/v1.3.md
               - v1.2: implementations/v1.2.md
