--- a/nav.yml
+++ b/nav.yml
@@ -18,6 +18,7 @@ nav:
       - Implementations:
           - List: implementations.md
           - Comparisons:
+            #   - v1.5: implementations/v1.5.md
               - v1.4: implementations/v1.4.md
               - v1.3: implementations/v1.3.md
               - v1.2: implementations/v1.2.md
@@ -68,6 +69,9 @@ nav:
           - Development:
               - Standard: reference/spec.md
               - Experimental: reference/specx.md
+          - v1.5:
+              - Standard: reference/1.5/spec.md
+              - Experimental: reference/1.5/specx.md
           - v1.4:
               - Standard: reference/1.4/spec.md
               - Experimental: reference/1.4/specx.md
